<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/register"
    tools:context=".MainActivity"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2">
        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <ScrollView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1">

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText"
                            android:layout_weight="1"
                            android:hint="@string/Hint_Imie"
                            android:allowUndo="false"
                            android:fadeScrollbars="false" />

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText2"
                            android:layout_weight="1"
                            android:hint="@string/Hint_Nazwisko" />
                    </LinearLayout>

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/editText3"
                        android:hint="@string/Hint_Adres_Email"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/editText4"
                        android:hint="@string/Hint_Hasło"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1">

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:inputType="phone"
                            android:ems="10"
                            android:id="@+id/editText5"
                            android:layout_weight="1"
                            android:hint="@string/Hint_Nr_Telefonu" />
                    </LinearLayout>

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/Hint_Rejestruj"
                        android:id="@+id/button"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/regulamin"
                        android:id="@+id/textView"
                        android:textAlignment="center"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_weight="1"
                        android:autoLink="web"
                        android:linksClickable="true"
                        android:autoText="false" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
